Fix fork menu on mobile browsers, fixes #188

--- a/doc/_static/tmuxp.css
+++ b/doc/_static/tmuxp.css
@@ -20,3 +20,9 @@ div#changelog > div.section > ul > li > p:only-child {
 div#text-based-window-manager {
     clear: both;
 }
+
+@media screen and (max-width: 768px) {
+    #fork-gh img {
+        display: none;
+    }
+}
